--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/05.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/05.md
@@ -240,7 +240,10 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अयातयामतां पूजां सारत्वं छन्दसां तथा इच्छन्त ऋषयोऽपश्यन्नुपाकर्म तपोबलात् १५
+अयातयामतां पूजां  
+सारत्वं छन्दसां तथा  
+इच्छन्त ऋषयोऽपश्यन्न्  
+उपाकर्म तपोबलात् १५
 </details>
 
 <details><summary>मूलम्</summary>
@@ -256,7 +259,8 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्मात्षट्कर्मनित्येनात्मनो मन्त्रसिद्धये उपाकर्तव्यमित्याहुः कर्मणां सिद्धिमिच्छता १६
+तस्मात् षट्-कर्म-नित्येनात्मनो मन्त्र-सिद्धये  
+उपाकर्तव्यम् इत्याहुः कर्मणां सिद्धिमिच्छता १६
 </details>
 
 <details><summary>मूलम्</summary>
@@ -274,7 +278,10 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उपाकर्मणि चोत्सर्गे त्रिरात्रं क्षपणं भवेत् अष्टकासु त्वहोरात्रमृत्वन्त्यासु च रात्रिषु १७
+उपाकर्मणि चोत्सर्गे  
+त्रिरात्रं क्षपणं भवेत्  
+अष्टकासु त्व् अहोरात्रम्  
+ऋत्वन्त्यासु च रात्रिषु १७
 </details>
 
 <details><summary>मूलम्</summary>
