--- a/bAShkalam/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/03.md
+++ b/bAShkalam/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/03.md
@@ -164,7 +164,7 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अरुन्मुखान् यतीन् सालावकेभ्यः प्रायच्छम् ॥ **१०** ॥
+अरुन्मुखान् यतीन् सालावकेभ्यः प्रायच्छम् ॥ **१०** ॥+++(5)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -179,7 +179,7 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वह्नीः सन्धा अतिक्रम्य दिवि प्राह्वादीनतृणहम् , अन्तरिक्षे पौलोमान् ।पृथिव्या कालकञ्जान् ॥ **११** ॥
+वह्नीः सन्धा अतिक्रम्य+++(5)+++ दिवि प्राह्वादीनतृणहम् , अन्तरिक्षे पौलोमान् ।पृथिव्या कालकञ्जान् ॥ **११** ॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -213,7 +213,7 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-न पितवधेन, न स्तेयेन, न भ्रूणहत्यया ; नास्य पापं चकृषो मुखं नीलं वेति ॥ **१३** ॥
+न पितवधेन, न स्तेयेन, न भ्रूणहत्यया ; नास्य पापं चकृषो+++(=चिकीर्षुः)+++ मुखं +++(स्वस्थकान्तिरूप)+++नीलं वे+++(व्ये)+++ति ॥ **१३** ॥
 </details>
 
 <details><summary>मूलम्</summary>
